test/features/errors/codegen/e2004_failed_build_store.spl
# E2004: Failed to Build Store

Feature: E2004 - Failed to Build Store Instruction
  As a Simple compiler
  I want to detect failures in building store instructions
  So that internal compiler errors are reported

  Background:
    Given I have the Simple compiler

  Scenario: Store instruction build failure
    When I compile with codegen:
      '''
      fn test():
        var x = 42
        # Code that triggers store instruction failure
        x = problematic_value()
      '''
    Then I should see error E2004
    And the error message should be "failed to build store instruction"
    And the label should indicate "codegen failed here"
    And the help should suggest "this is an internal compiler error, please report it"

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile with codegen:
      '''
      fn test():
        var x = 42
        x = problematic_value()
      '''
    Then I should see error E2004
    And the error message should contain "저장 명령 빌드 실패"
